<resources>
    <string name="app_name">Techlanta Transport</string>
    <string name="action_settings">Settings</string>
    <string name="update_1">
        \t\t\tTraffic Pileup ahead on I-75
        \n\t\t\tTime: 8:01 AM
        \n\t\t\tExpected Cleanup Time: determining...
    </string>
    <string name="update_2">
        \t\t\tCongested Traffic on Memorial Drive
        \n\t\t\tTime: 7:36 AM
        \n\t\t\tExpected Delay: 30 minute delay that route
    </string>
    <string name="update_3">
        \t\t\tDowned Power lines on Lawrenceville Highway
        \n\t\t\t> Lanes closed for repair
        \n\t\t\tTime: 7:02 AM
    </string>
    <string name="target_ad_text">
        \t30 % Clearance Sale
        \n\tLocation: Atlantic Station,
        \n\t375 18th St. NW
    </string>
    <string name="walmart_ad_text">
        \t20 % Clothing Sale
        \n\tLocation: Historic Westside Village
    </string>
    <string name="ikea_ad_text">
        \t4th of July Furniture Sale
        \n\tLocation: 441 16th St. NW
    </string>
</resources>